--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,109 @@ body{
 .container-card .text-gruop .btn a:hover{
     color: #ED5D00;
 }
+.produtcs .text-case{
+    margin: 0 2em;
+}
+.produtcs .text-case h1{
+   font-size: 2.5em;
+   text-transform: uppercase;
+   font-weight: 800;
+   margin: .45em 0;
+}
+.produtcs .text-case p{
+   font-size: 1.2em;
+   font-weight: 300;
+   margin: .45em 0;
+   line-height: 1.4;
+}
+
+.produtcs-container{
+    display: flex;
+    background-color:#f0f1e8;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 30px;
+    gap: 30px;
+}
+.produtcs-container .case-img{
+    max-width: 200px;
+    width: 100%;
+}
+.produtcs-container .case-img img{
+    width: 100%;
+}
+.produtcs-container .cd-text{
+    width: 40%;
+    margin-top: 20px;
+}
+.produtcs-container .cd-text h2{
+    font-size: clamp(2.2em,4vw,1.4em);
+    font-weight: 800;
+    color: #ED5D00;
+}
+.produtcs-container .cd-text p{
+    font-size: clamp(1.0em,8vw,.90em);
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+}
+.produtcs-container .cd-text a{
+    font-size: clamp(.90em,4vw,1.4em);
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+    text-decoration: none;
+    color: #ED5D00;
+    font-weight: 500;
+}
+.produtcs-container .cd-icons .img-dog img{
+    width: 300px;
+}
+
+
+
+
+
+
+.produtcs-container .cd-icons .icons-social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+}
+.produtcs-container .cd-icons .icons-social .face a{
+    text-decoration: none;
+    color: #ED5D00;
+    font-size: var(--font-zise);
+    font-weight: 500;
+}
+.produtcs-container .cd-icons .icons-social .instagram{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.produtcs-container .cd-icons .icons-social .face{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.produtcs-container .cd-icons .icons-social .face img{
+    width: 30px;
+}
+.produtcs-container .cd-icons .icons-social .instagram img{
+    width: 30px;
+}
+.produtcs-container .cd-icons .icons-social .instagram a{
+    text-decoration: none;
+    color: #ED5D00;
+    font-size: var(--font-zise);
+    font-weight: 500;
+}
+
+
+
+
 
 @media screen and (max-width:930px) {
     .navgatior{
@@ -169,5 +272,73 @@ body{
     .navgatior .menu-case li{
         padding: 0;
     }
-    
+    .produtcs-container{
+        display: block;
+        padding: 20px 0;
+        gap: 0;
+    }
+    .produtcs-container .cd-text{
+        width: 100%;
+        margin-top: 20px;
+        text-align: center;
+    }
+    .produtcs-container .cd-text p{
+        font-size: clamp(.9em,4vw,.80em);
+        font-weight: 400;
+        line-height: 1.5;
+        text-align: center;
+        margin-top: 12px;
+    }
+    .produtcs-container .case-img{
+        max-width: 200px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .produtcs-container .case-img img{
+        width: 100%;
+    }
+    .produtcs-container .cd-icons .img-dog{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .produtcs-container .cd-icons .img-dog img{
+        width: 70%;
+    }
+    .produtcs-container .cd-icons .icons-social{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        gap: 20px;
+    }
+    .produtcs-container .cd-icons .icons-social .face a{
+        text-decoration: none;
+        color: #ED5D00;
+        font-size: var(--font-zise);
+        font-weight: 500;
+    }
+    .produtcs-container .cd-icons .icons-social .instagram{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .produtcs-container .cd-icons .icons-social .face{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .produtcs-container .cd-icons .icons-social .face img{
+        width: 30px;
+    }
+    .produtcs-container .cd-icons .icons-social .instagram img{
+        width: 30px;
+    }
+    .produtcs-container .cd-icons .icons-social .instagram a{
+        text-decoration: none;
+        color: #ED5D00;
+        font-size: var(--font-zise);
+        font-weight: 500;
+    }
 }
