--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ body{
       margin: 12px 20px;
     }
     .navgatior .burguer-menu{
+        display: block;
         width: 40px;
         height: 40px;
         background-color: #ED5D00;
